third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_field_field_invalid.exp

Diagnostics:
error: cannot copy mutable reference in local `inner` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_field_invalid.move:14:18
   │
13 │         let c = &mut inner.f1;
   │                 ------------- previous mutable field borrow
14 │         let f1 = &inner.f1;
   │                  ^^^^^^^^^ copied here

error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_field_field_invalid.move:15:9
   │
13 │         let c = &mut inner.f1;
   │                 ------------- other mutable field borrow
14 │         let f1 = &inner.f1;
   │                  --------- field borrow attempted here
15 │         *f1;
   │         ^^^ reference used here

error: cannot copy mutable reference in local `inner` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_field_invalid.move:21:18
   │
20 │         let c = id_mut(&mut inner.f1);
   │                 ---------------------
   │                 │      │
   │                 │      previous mutable field borrow
   │                 used by mutable call result
21 │         let f1 = &inner.f1;
   │                  ^^^^^^^^^ copied here

error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_field_field_invalid.move:22:9
   │
20 │         let c = id_mut(&mut inner.f1);
   │                        ------------- other mutable field borrow
21 │         let f1 = &inner.f1;
   │                  --------- field borrow attempted here
22 │         *f1;
   │         ^^^ reference used here
